bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
while (estSurMessage()) {if (litMessage()=="R") {droite();avance();}
^BDR:1: error: Missing closing brace `}' assumed here
while (estSurMessage()) {if (litMessage()=="R") {droite();avance();}
^BDR:1: error: expected class or object definition
while (estSurMessage()) {if (litMessage()=="R") {droite();avance();}
^BDR:4: error: Missing closing brace `}' assumed here
                        if (litMessage()=="A") {avance();
                        ^BDR:5: error: Missing closing brace `}' assumed here
                        if (litMessage()=="B") {avance();avance();
                        ^BDR:6: error: Missing closing brace `}' assumed here
                        if (litMessage()=="C") {avance();avance();avance();
                        ^BDR:7: error: Missing closing brace `}' assumed here
                        if (litMessage()=="Z") {recule();
                        ^BDR:8: error: Missing closing brace `}' assumed here
                        if (litMessage()=="Y") {recule();recule();
                        ^BDR:9: error: Missing closing brace `}' assumed here
                        If (litMessage()=="X") {recule();recule();} 
                        ^